Add pz 3 lb4 statistic
